--- a/app/views/support/support.html
+++ b/app/views/support/support.html
@@ -8,7 +8,7 @@
             data-ng-click="goBack()" data-element="support_next_child-{{child._id}}">
             <span>{{'Atrás' | translate}}</span>
         </button>
-        <h1 class="h1 header__title support--tittle">{{ 'Soporte de Bitbloq' | translate }}</h1>
+        <h1 class="h1 header__title support--tittle">{{ 'support-title' | translate }} <strong>Bitbloq</strong></h1>
     </div>
     <section>
         <div class="support--block">
