modify data-elements for download buttons

--- a/app/views/landing/landing-howitworks.html
+++ b/app/views/landing/landing-howitworks.html
@@ -17,27 +17,27 @@
                 <h2>{{ 'landing_howitworks_oval_3' | translate }}</h2>
             </div>
         </div>
-        <a class="download-button" ng-if="common.os === 'Mac'" data-ng-href="{{envData.config.web2boardLinkMac}}"  data-element="macBtn">
+        <a class="download-button" ng-if="common.os === 'Mac'" data-ng-href="{{envData.config.web2boardLinkMac}}"  data-element="downloadBtn">
             <button class="btn btn--quaternary btn--medium">
                 {{ 'landing_link_download' | translate }} Mac OS X
             </button>
         </a>
-        <a class="download-button" ng-if="common.os === 'Windows'" data-ng-href="{{envData.config.web2boardLinkWindows}}"  data-element="windowsBtn">
+        <a class="download-button" ng-if="common.os === 'Windows'" data-ng-href="{{envData.config.web2boardLinkWindows}}"  data-element="downloadBtn">
             <button class="btn btn--quaternary btn--medium">
                 {{ 'landing_link_download' | translate }} Windows 32/64 bits
             </button>
         </a>
-        <a class="download-button" ng-if="common.os === 'Linux'" data-ng-href="{{envData.config.web2boardLinkLinux}}" data-element="linux64Btn">
+        <a class="download-button" ng-if="common.os === 'Linux'" data-ng-href="{{envData.config.web2boardLinkLinux}}" data-element="downloadBtn">
             <button class="btn btn--quaternary btn--medium">
                 {{ 'landing_link_download' | translate }} Linux 64-bits
             </button>
         </a>
-        <a class="download-button" ng-if="common.os === 'Linux'" data-ng-href="{{envData.config.web2boardLinkLinux32}}"  data-element="linux32Btn">
+        <a class="download-button" ng-if="common.os === 'Linux'" data-ng-href="{{envData.config.web2boardLinkLinux32}}"  data-element="downloadBtn">
             <button class="btn btn--quaternary btn--medium">
                 {{ 'landing_link_download' | translate }} Linux 32-bits
             </button>
         </a>
-        <div class="download-button" ng-if="common.os === 'ChromeOS'" ng-click="installChromeApp()"  data-element="chromeBtn">
+        <div class="download-button" ng-if="common.os === 'ChromeOS'" ng-click="installChromeApp()"  data-element="downloadBtn">
             <button class="btn btn--quaternary btn--medium">
                 {{ 'landing_link_download' | translate }} Chrome OS
             </button>
