--- a/app/styles/landing-help.scss
+++ b/app/styles/landing-help.scss
@@ -65,6 +65,7 @@
                         color      : $black-light;
                         font-size  : 25px;
                         font-weight: 400;
+                        cursor: pointer;
                     }
 
                     span {
