--- a/app/views/login.html
+++ b/app/views/login.html
@@ -74,11 +74,11 @@
                             <label for="birthday">{{ 'login-birth-day' | translate }}</label>
                             <span id="birthday" data-ng-class="{'input input--date':true, 'input--focused':focus === 'birthday'}">
                                 <div class="input--group--date">
-                                    <input data-element="login-day-input" type="text" id="birthdayDay" name="day" autocomplete="off" pattern="[0-9]+" maxlength="2" placeholder="{{'days' | translate}}" data-ng-model="socialYounger.birthday.day" data-ng-focus="formSocial.userBirthday.submitted=false; focusHandler($event)"
+                                    <input data-element="login-day-input" type="text" id="birthdayDayLogin" name="day" autocomplete="off" pattern="[0-9]+" maxlength="2" placeholder="{{'days' | translate}}" data-ng-model="socialYounger.birthday.day" data-ng-focus="formSocial.userBirthday.submitted=false; focusHandler($event)"
                                            data-ng-blur="focus = false; checkAge(socialYounger)" autocorrect="off" onkeypress="return event.charCode >= 48 && event.charCode <= 57" data-ng-class="{'birthday--error':formSocial.userBirthday.submitted && (errors.register.emptyBirthday || errors.register.validBirthday)}" required>
-                                    <input data-element="login-month-input" type="text" id="birthdayMonth" name="month" autocomplete="off" pattern="[0-9]+" maxlength="2" placeholder="{{'months' | translate}}" data-ng-model="socialYounger.birthday.month" data-ng-focus="formSocial.userBirthday.submitted=false; focusHandler($event)"
+                                    <input data-element="login-month-input" type="text" id="birthdayMonthLogin" name="month" autocomplete="off" pattern="[0-9]+" maxlength="2" placeholder="{{'months' | translate}}" data-ng-model="socialYounger.birthday.month" data-ng-focus="formSocial.userBirthday.submitted=false; focusHandler($event)"
                                            data-ng-blur="focus = false; checkAge(socialYounger)" autocorrect="off" onkeypress="return event.charCode >= 48 && event.charCode <= 57" data-ng-class="{'birthday--error':formSocial.userBirthday.submitted && (errors.register.emptyBirthday || errors.register.validBirthday)}" required>
-                                    <input data-element="login-year-input" type="text" id="birthdayYear" name="year" autocomplete="off" pattern="[0-9]+" maxlength="4" minlength="4" placeholder="{{'years' | translate}}" data-ng-model="socialYounger.birthday.year"
+                                    <input data-element="login-year-input" type="text" id="birthdayYearLogin" name="year" autocomplete="off" pattern="[0-9]+" maxlength="4" minlength="4" placeholder="{{'years' | translate}}" data-ng-model="socialYounger.birthday.year"
                                            data-ng-focus="formSocial.userBirthday.submitted=false; focusHandler($event)"
                                            data-ng-blur="focus = false; checkAge(socialYounger)" autocorrect="off" onkeypress="return event.charCode >= 48 && event.charCode <= 57" data-ng-class="{'birthday--error':formSocial.userBirthday.submitted && (errors.register.emptyBirthday || errors.register.validBirthday)}" required>
                                 </div>
@@ -103,7 +103,7 @@
                                 <svg class="svg-icon form-icon--username icon--form--validating">
                                     <use xlink:href="#user"></use>
                                 </svg>
-                                <input ng-class="{'input--login--username':true}" ng-model="user.tutor.firstName" ng-focus="formSocial.tutorName.submitted = false; focus = 'tutorName'" ng-blur="formSocial.tutorName.submitted = true;focus = false" id="tutorName" name="tutorName" type="text" maxlength="50"
+                                <input ng-class="{'input--login--username':true}" ng-model="user.tutor.firstName" ng-focus="formSocial.tutorName.submitted = false; focus = 'tutorName'" ng-blur="formSocial.tutorName.submitted = true;focus = false" id="tutorNameLogin" name="tutorName" type="text" maxlength="50"
                                        placeholder="{{'name' | translate}}"
                                        autocorrect="off" autocomplete="off" required data-element="login-tutor-name">
                             </span>
@@ -118,7 +118,7 @@
                                 <svg class="svg-icon form-icon--username icon--form--validating">
                                     <use xlink:href="#user"></use>
                                 </svg>
-                                <input ng-class="{'input--login--username':true}" ng-model="user.tutor.lastName" ng-focus="formSocial.tutorSurname.submitted = false; focus = 'tutorSurname'" ng-blur="formSocial.tutorSurname.submitted = true;focus = false" id="tutorSurname" name="tutorSurname" type="text" maxlength="50"
+                                <input ng-class="{'input--login--username':true}" ng-model="user.tutor.lastName" ng-focus="formSocial.tutorSurname.submitted = false; focus = 'tutorSurname'" ng-blur="formSocial.tutorSurname.submitted = true;focus = false" id="tutorSurnameLogin" name="tutorSurname" type="text" maxlength="50"
                                        placeholder="{{'surname' | translate}}" autocorrect="off" autocomplete="off" required data-element="login-tutor-lastname">
                             </span>
                             <span class="form--error" data-ng-show="formSocial.tutorSurname.submitted && formSocial.tutorSurname.$error.required" data-element="show-nosurname">
@@ -132,7 +132,7 @@
                                 <svg class="svg-icon">
                                     <use xlink:href="#mail"></use>
                                 </svg>
-                                <input data-ng-model="user.tutor.email" data-ng-focus="formSocial.tutorEmail.submitted=false; focus = 'tutorEmail'" data-ng-blur="focus = false;formSocial.tutorEmail.submitted=true;" id="tutorEmail" name="tutorEmail" type="email"
+                                <input data-ng-model="user.tutor.email" data-ng-focus="formSocial.tutorEmail.submitted=false; focus = 'tutorEmail'" data-ng-blur="focus = false;formSocial.tutorEmail.submitted=true;" id="tutorEmailLogin" name="tutorEmail" type="email"
                                        data-ng-pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)+$/" placeholder="{{'email' | translate}}" autocorrect="off" autocomplete="off" required data-element="login-tutor-email">
                             </span>
                             <span class="form--error" data-ng-show="formSocial.tutorEmail.submitted && formSocial.tutorEmail.$error.required" data-element="register-show-notutoremail">
@@ -149,7 +149,7 @@
                         <!-- Service terms -->
                         <div class="form-control form-service-term">
                         <span data-ng-class="{'input input--checkbox':!formSocial.readServiceTerm.submitted || user.cookiePolicyAccepted, 'input--checkbox--error':formSocial.readServiceTerm.submitted && !user.cookiePolicyAccepted}">
-                            <input type="checkbox" name="readServiceTerm" id="readServiceTerm" ng-model="user.cookiePolicyAccepted" data-ng-focus="formSocial.readServiceTerm.submitted=false" data-element="login-social-term-checkbox" required>
+                            <input type="checkbox" name="readServiceTerm" id="readServiceTermLogin" ng-model="user.cookiePolicyAccepted" data-ng-focus="formSocial.readServiceTerm.submitted=false" data-element="login-social-term-checkbox" required>
                             <label for="readServiceTerm">
                                 {{ 'register-read-service-term' | translate }}
                                 <a href="#/terms" target="_blank">{{ 'register-read-general-conditions' | translate}}</a>
