--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -58,7 +58,7 @@
         text-align: center;
     }
 
-    & + #formForgot {
+    &#formForgot {
         .btn--disabled {
             width: 100%;
             color: red;
@@ -225,7 +225,7 @@
         margin-left: -0.95rem !important;
         margin-right: -0.95rem !important;
         background-color: red;
-    } 
+    }
 }
 
 .social--buttons__container {
