[SWBIT-2626] add: konami + clearPunishment() On dev, if you type the konami code (or the simplified one), the konami directive will fire a function. In this case, konami -> clearPunishment()

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="form form--login">
+<div class="form form--login" konami>
     <div ng-class="{'login-is-loading':common.isLoading}"></div>
     <div ng-show="!common.isLoading" ng-class="{'form--container':true}">
         <a href="#/">
