[SWBIT-2764]  fix: register u14 changes + style

--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -180,10 +180,10 @@
     color: white;
     margin-top: 1em;
     display: block;
+    text-align: center;
 
     a {
         color: white;
-        margin-left: 8em;
     }
 }
 
